--- a/app/views/patients/patient_not_found.html.erb
+++ b/app/views/patients/patient_not_found.html.erb
@@ -7,15 +7,18 @@
 
       <!-- Modal content-->
       <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Not found</h4>
-        </div>
+
+<div class="modal-header">
+  <div class="modal-title" id="myModalLabel"> Not Found </div>
+  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+</div>
+
+
         <div class="modal-body">
 	  <p>Patient not found. Please try again</p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
         </div>
       </div>
 
