--- a/app/views/patients/_addrlabel.html.erb
+++ b/app/views/patients/_addrlabel.html.erb
@@ -1,12 +1,14 @@
+
 <div class="modal-header">
-	<button type="button" class="close" data-dismiss="modal">&times;</button>
-	<b class="modal-title" id="myModalLabel"><%= @patient.full_name %>  - Address Label</b>
+  <div class="modal-title" id="myModalLabel"> <%= @patient.full_name %>  - Address Label </div>
+  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 </div>
+
 <div class="modal-body">
         <embed class="center" src="/uploads/addrlabel.pdf" width=100%  height=260px frameborder="0" > 
 </div>
 <div class="modal-footer">
-  <button class="btn btn-primary" class="close" data-dismiss="modal">Dismiss</button>
+  <button class="btn btn-primary" class="close" data-bs-dismiss="modal">Dismiss</button>
 </div>
 
 
