--- a/app/views/patients/_buttons.html.erb
+++ b/app/views/patients/_buttons.html.erb
@@ -1,7 +1,7 @@
 <div class="row m-1">
 <% unless @patient.pat_type == DECEASED_PATIENT %>
 <div class="col-md-3 col-xs-12 pt-3">
-<%= button_to 'New Visit', new_patient_visit_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', class:"btn btn-primary", method: 'get'  %> 
+<%= button_to 'New Visit', new_patient_visit_path(@patient), remote: remote, 'data-bs-toggle':  "modal", 'data-bs-target': '#modal-window', class:"btn btn-primary", method: 'get'  %> 
 </div> 
 <% end %>
 
@@ -11,16 +11,16 @@
 
 <div class="col-md-3 col-xs-12 pt-3">
   <div class="btn-group dropup col-xs-12">
-  <button class="btn btn-danger dropdown-toggle btn-block" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Add New <span class="caret"></span>
+  <button class="btn btn-danger dropdown-toggle btn-block" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Add New <span class="caret"></span>
   </button>
 
   <ul class="dropdown-menu">
-    <li><%= link_to 'Medication', new_patient_medication_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', method: 'get', onclick: "set_lg_modal()" %> </li>
-    <li><%= link_to 'Invoice', new_patient_invoice_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', method: 'get', onclick: "set_lg_modal()" %> </li>
-    <li><%= link_to "Letter", new_patient_letter_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', method: 'get', onclick: "set_lg_modal()" %> </li>
-    <li><%= link_to "Referral", new_patient_referral_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', method: 'get', onclick: "set_lg_modal()" %></li>
+    <li><%= link_to 'Medication', new_patient_medication_path(@patient), remote: remote, 'data-bs-toggle':  "modal", 'data-bs-target': '#modal-window', method: 'get', onclick: "set_lg_modal()" %> </li>
+    <li><%= link_to 'Invoice', new_patient_invoice_path(@patient), remote: remote, 'data-bs-toggle':  "modal", 'data-bs-target': '#modal-window', method: 'get', onclick: "set_lg_modal()" %> </li>
+    <li><%= link_to "Letter", new_patient_letter_path(@patient), remote: remote, 'data-bs-toggle':  "modal", 'data-bs-target': '#modal-window', method: 'get', onclick: "set_lg_modal()" %> </li>
+    <li><%= link_to "Referral", new_patient_referral_path(@patient), remote: remote, 'data-bs-toggle':  "modal", 'data-bs-target': '#modal-window', method: 'get', onclick: "set_lg_modal()" %></li>
   <% if @patient.med_count >0 %>
-    <li><%= link_to "Prescription", new_patient_prescription_path(@patient), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', method: 'get', onclick: "set_lg_modal()"  %></li>
+    <li><%= link_to "Prescription", new_patient_prescription_path(@patient), remote: remote, 'data-bs-toggle':  "modal", 'data-bs-target': '#modal-window', method: 'get', onclick: "set_lg_modal()"  %></li>
   <% end %>
   </ul>
   </div>
