--- a/app/views/patients/_visit_history.html.erb
+++ b/app/views/patients/_visit_history.html.erb
@@ -1,7 +1,6 @@
-
 <div class="modal-header">
-	<button type="button" class="close" data-dismiss="modal">&times;</button>
-	<b class="modal-title" id="myModalLabel"><%= @patient.full_name %> - Visit History</b>
+  <div class="modal-title" id="myModalLabel"><%= @patient.full_name %> - Visit History</div>
+  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 </div>
 
 <div class="modal-body">
