--- a/app/views/schedules/_form.html.erb
+++ b/app/views/schedules/_form.html.erb
@@ -1,20 +1,17 @@
-<div class="card">
-  <div class='card-body'>
 <%= simple_form_for(@schedule) do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-  <div class="form-inputs">
     <%= f.input :doctor_id, collection: get_active_doctors, label_method: :lname, value_method: :id, label: "Doctor", include_blank: false %>
-    <%= f.input :dow, as: :wday, label: 'Week Day'  %>
+    <%= f.input :dow, as: :weekday_select, label: 'Week Day: '  %>
+
     <%= f.input :weeks, include_blank: "Every Week" %> <%# collection: ['1','2','3'], input_html: { multiple: true } %>
     <%= f.input :start_time, html5: true %>
     <%= f.input :end_time, html5: true %>
-  </div>
 
-  <div class="form-actions">
+  <div class="mt-3">
      <%= f.submit yield(:button_text), class: "btn btn-primary" %> 
   </div>
+
 <% end %>
-</div>
-</div>
+
