--- a/app/views/schedules/edit.html.erb
+++ b/app/views/schedules/edit.html.erb
@@ -3,8 +3,12 @@ provide(:title, 'Edit Schedule')
 provide(:button_text, 'Save Schedule')
 %>
 
-<div class="col-sm-6 col-sm-offset-3">
-   <h3 class='display-1'>Edit schedule </h3>
-   <%= render 'form' %>
+<div class='card bg-light mx-auto mt-3 card-width'>
+  <div class='card-body'>
+    <h5 class="card-title"> Edit Schedule </h5>
+    <p class="card-text">
+      <%= render 'form' %>
+    </p>
 </div>
-~           
+</div>
+
