--- a/app/views/patients/_doctor_desktop_visits.html.erb
+++ b/app/views/patients/_doctor_desktop_visits.html.erb
@@ -23,7 +23,7 @@
 
 	<div class="spacer-10"></div>
 	<div class="row">
-	  <div class="col-md-12"> <%= link_to "Print Visit History", visit_history_patient_path(@patient),  remote: device_is_desktop?, 'data-toggle':  "modal", 'data-target': '#modal-window', class: "btn btn-info", method: 'get', onclick: "set_lg_modal()" %> </div>
+	  <div class="col-md-12"> <%= link_to "Print Visit History", visit_history_patient_path(@patient),  remote: device_is_desktop?, 'data-bs-toggle':  "modal", 'data-bs-target': '#modal-window', class: "btn btn-info", method: 'get', onclick: "set_lg_modal()" %> </div>
 	</div>
         <div style="float:right">
 	<%= will_paginate @visits %>
