--- a/app/views/patients/_patient_desktop_visits.html.erb
+++ b/app/views/patients/_patient_desktop_visits.html.erb
@@ -23,7 +23,7 @@
 	</table>
 
 	<div class="row pt-3">
-	  <div class="col-md-12"> <%= link_to "Print Visit History", visit_history_patient_path(@patient),  remote: device_is_desktop?, 'data-toggle':  "modal", 'data-target': '#modal-window', class: "btn btn-info", method: 'get', onclick: "set_lg_modal()" %> </div>
+	  <div class="col-md-12"> <%= link_to "Print Visit History", visit_history_patient_path(@patient),  remote: device_is_desktop?, 'data-bs-toggle':  "modal", 'data-bs-target': '#modal-window', class: "btn btn-info", method: 'get', onclick: "set_lg_modal()" %> </div>
 	</div>
 	<div class="row mt-3 my_pagination" style="float: right">
 	<%= will_paginate @visits %>
