--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -372,7 +372,8 @@ footer {
   text-align: center;
   padding: 0.3em;
   cursor: default;
-  font-size: 0.5em;
+  font-size: 0.7em;
+  float: right;
 }
 
 .my_pagination a, .my_pagination span, .my_pagination em {
