--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -26,9 +26,7 @@
 <% end %>
 </div>
 
-<div class="row">
-<div class="bottom_nav my_pagination">
-<%= will_paginate @charts,  class: "btn" %>
-</div>
+<div class="my_pagination">
+<%= will_paginate @charts %>
 </div>
 
