--- a/app/views/claims/index.html.erb
+++ b/app/views/claims/index.html.erb
@@ -50,7 +50,6 @@
   </tbody>
 </table>
 
-<div class="row">
-<div class="bottom_nav my_pagination">
-<%= will_paginate @claims, params: {filter_doc_id: @doc_id, adjusted: @adjusted}, class: "btn" %> 
+<div class="my_pagination">
+<%= will_paginate @claims, params: {filter_doc_id: @doc_id, adjusted: @adjusted} %> 
 </div>
