--- a/app/views/daysheet/_admin_desktop_index.html.erb
+++ b/app/views/daysheet/_admin_desktop_index.html.erb
@@ -57,11 +57,8 @@
 
   </tbody>
 </table>
-
-<% if @daysheet.any? %>
-<div class="bottom_nav my_pagination">
-<%= will_paginate @daysheet, class: "btn" %> 
 </div>
-<% end %>
 
+<div class=" my_pagination">
+<%= will_paginate @daysheet if @daysheet.any? %> 
 </div>
