--- a/app/views/diagnoses/index.html.erb
+++ b/app/views/diagnoses/index.html.erb
@@ -30,6 +30,6 @@
 <% end %>
 </div>
 
-<div class="bottom_nav my_pagination">
-<%= will_paginate @diagnoses, class: "btn" %>
+<div class="my_pagination">
+<%= will_paginate @diagnoses %>
 </div>
