--- a/app/views/export_files/index.html.erb
+++ b/app/views/export_files/index.html.erb
@@ -20,6 +20,6 @@
   </tbody>
 </table>
 
-<div class="bottom_nav my_pagination">
-<%= will_paginate @export_files, class: "btn" %>
+<div class="my_pagination">
+<%= will_paginate @export_files %>
 </div>
