--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -24,8 +24,6 @@
   </tbody>
 </table>
 
-<div class="row">
-<div class="bottom_nav my_pagination">
-<%= will_paginate @invoices, class: "btn" %>
-</div>
+<div class="my_pagination">
+<%= will_paginate @invoices %>
 </div>
