--- a/app/views/patients/_mobile_index.html.erb
+++ b/app/views/patients/_mobile_index.html.erb
@@ -30,8 +30,8 @@
 <% end %>
 </div>
 
-<div class="bottom_nav my_pagination">
-<%= will_paginate @patients, class: "btn" %> 
+<div class="my_pagination">
+<%= will_paginate @patients %> 
 </div>
 
 
