--- a/app/views/prescriptions/index.html.erb
+++ b/app/views/prescriptions/index.html.erb
@@ -25,8 +25,8 @@
   </tbody>
 </table>
 
-<div class="bottom_buttons">
-<%= will_paginate @prescriptions, class: "btn" %>
+<div class="my_pagination">
+<%= will_paginate @prescriptions %>
 </div>
 </div>
 </div>
