--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -29,7 +29,8 @@
 <div class="bottom_buttons ">
 <%= button_to "Create New Report", new_report_path, class: "btn btn-primary col-md-2", method: 'get'  %>
 </div>
+</div>
 
-<div class="bottom_nav my_pagination">
-<%= will_paginate @reports, class: "btn" %> 
+<div class="my_pagination">
+<%= will_paginate @reports %> 
 </div>
