--- a/app/views/daysheet/_admin_mobile_index.html.erb
+++ b/app/views/daysheet/_admin_mobile_index.html.erb
@@ -33,10 +33,8 @@
   </tbody>
 </table>
 
-<% if @daysheet.any? %>
-<div class="bottom_nav my_pagination">
-<%= will_paginate @daysheet, class: "btn" %> 
+<div class="my_pagination">
+<%= will_paginate @daysheet if @daysheet.any? %> 
 </div>
-<% end %>
 
 </div>
