--- a/app/views/daysheet/_doctor_mobile_index.html.erb
+++ b/app/views/daysheet/_doctor_mobile_index.html.erb
@@ -37,11 +37,9 @@
 
   </tbody>
 </table>
-
-<% if @daysheet.any? %>
-<div class="bottom_nav my_pagination">
-<%= will_paginate @daysheet, class: "btn" %> 
 </div>
-<% end %>
 
+<div class="my_pagination">
+<%= will_paginate @daysheet if @daysheet.any? %> 
 </div>
+
