--- a/app/views/letters/index.html.erb
+++ b/app/views/letters/index.html.erb
@@ -21,6 +21,6 @@
   </tbody>
 </table>
 
-<div class="bottom_nav my_pagination">
-<%= will_paginate @letters, class: "btn" %>
+<div class="my_pagination">
+<%= will_paginate @letters %>
 </div>
