--- a/app/views/ra_messages/index.html.erb
+++ b/app/views/ra_messages/index.html.erb
@@ -22,6 +22,6 @@
   </tbody>
 </table>
 
-<div class="bottom_buttons ">
-<%= will_paginate @ra_messages, class: "btn" %> 
+<div class="my_pagination ">
+<%= will_paginate @ra_messages %> 
 </div>
