--- a/app/views/referrals/index.html.erb
+++ b/app/views/referrals/index.html.erb
@@ -21,6 +21,6 @@
   </tbody>
 </table>
 
-<div class="bottom_nav my_pagination">
-<%= will_paginate @referrals, class: "btn" %>
+<div class="my_pagination">
+<%= will_paginate @referrals %>
 </div>
