--- a/app/views/users/_desktop_index.html.erb
+++ b/app/views/users/_desktop_index.html.erb
@@ -24,6 +24,6 @@
   </tbody>
 </table>
 
-<div style="float: right">
-<%= will_paginate @users, class: "btn" %> 
+<div class="my_pagination">
+<%= will_paginate @users %> 
 </div>
