--- a/app/views/vaccines/index.html.erb
+++ b/app/views/vaccines/index.html.erb
@@ -30,6 +30,6 @@
 <%= button_to "Add New Vaccine", new_vaccine_path, class: "btn btn-primary col-md-2", :method => "get" %>
 </div>
 
-<div class="bottom_nav my_pagination">
-<%= will_paginate @vaccines, class: "btn" %>
+<div class="my_pagination">
+<%= will_paginate @vaccines %>
 </div>
