--- a/app/views/static_pages/_mobile_home.html.erb
+++ b/app/views/static_pages/_mobile_home.html.erb
@@ -38,9 +38,9 @@
 
 <div align="center" class="pt-3"></div>
 <div class="card text-center mx-auto bg-info w-75">
-  <h1 class="card-title pt-2"><i class="bi bi-question-circle" style="font-size: 20px"></i>&nbsp; Ask The Expert </h1>
+  <h1 class="card-title pt-2"><i class="bi bi-question-circle" style="font-size: 20px"></i>&nbsp; Ask Virtual Doctor </h1>
   <div class="card-body pt-0">
-      <%= link_to 'AI Virtual Assistant - Ask any question in any language and get instant answer', static_pages_ai_chat_path, class: "btn btn-info stretched-link" %>
+      <%= link_to 'AI powered Virtual Assistant - ask medical question in any language and get instant answer', static_pages_ai_chat_path, class: "btn btn-info stretched-link" %>
    </div>
 </div>
 
