--- a/app/views/static_pages/_mobile_home.html.erb
+++ b/app/views/static_pages/_mobile_home.html.erb
@@ -22,8 +22,8 @@
 
   <div align="center" class="pt-2">
     <div class="card card-block text-white bg-primary w-75">
-      <h1 class="card-title text-center pt-3"> <i class="bi bi-phone"></i> Login/Register </h1>
       <div class="card-body pt-0">
+        <h1 class="card-title text-center pt-3"> <i class="bi bi-phone" style="font-size: 40px"></i> &nbsp; Login/Register </h1>
          <%= link_to 'You can register your visit and request doctor callback here', new_user_session_path, class: " stretched-link text-white " %>
       </div>
     </div>
@@ -36,12 +36,13 @@
       Get instant help on any health-related issue from our dedicated AI-powered virtual assistant. You can ask questions about your condition, treatment options or dosages of medications.
   </div>
 
-<div align="center" class="pt-3"></div>
-<div class="card text-center mx-auto bg-info w-75">
-  <h1 class="card-title pt-2"><i class="bi bi-question-circle" style="font-size: 20px"></i>&nbsp; Ask Virtual Doctor </h1>
+<div align="center" class="pt-3">
+<div class="card card-block bg-info w-75">
   <div class="card-body pt-0">
+  <h1 class="card-title text-center  pt-3"><i class="bi bi-question-circle" style="font-size: 35px"></i>&nbsp; Ask Virtual Doctor </h1>
       <%= link_to 'AI powered Virtual Assistant - ask medical question in any language and get instant answer', static_pages_ai_chat_path, class: "btn btn-info stretched-link" %>
-   </div>
+  </div>
+</div>
 </div>
 
 
@@ -51,16 +52,16 @@
 
   <div align="center" class="pt-3">
   <div class="card card-block text-white w-75" style="background-color: #00AA9E;">
-      <h1 class="card-title pt-3"> <i class="bi bi-calendar3"></i>&nbsp; Schedule</h1>
-      <div class="card-body pt-0">
+      <h1 class="card-title pt-3"> <i class="bi bi-calendar3" style="font-size: 35px"></i>&nbsp; Schedule</h1>
+      <div class="card-body">
          <%= link_to "#{Schedule.doc_on_duty}", show_schedule_path, class: "btn btn-outline stretched-link fs-6 text-white" %>
       </div>
   </div>
   </div>
 
-<div class="pt-5 fs-6"> <i class="bi bi-pin-map"></i> <%= link_to 'Show driving directions', show_directions_path %> </div>
-<div class='pt-2 fs-6'> <i class="bi bi-journal-medical"></i> <%= link_to 'Other walk-in clinics in Stoney Creek', other_clinics_path %></div>
-<div class="pb-5 pt-2 fs-6"> <i class="bi bi-info-circle"></i> <%= link_to 'Family doctors in Hamilton accepting new patients', other_doctors_path %></div>
+<div class="pt-5 fs-6"> <i class="bi bi-pin-map fs-1"></i> <%= link_to 'Show driving directions', show_directions_path %> </div>
+<div class='pt-2 fs-6'> <i class="bi bi-journal-medical fs-1"></i> <%= link_to 'Other walk-in clinics in Stoney Creek', other_clinics_path %></div>
+<div class="pb-5 pt-2 fs-6"> <i class="bi bi-info-circle fs-1"></i> <%= link_to 'Family doctors in Hamilton accepting new patients', other_doctors_path %></div>
 
 
 <%= render "footer_icons" %>
