--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,12 +1,18 @@
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <div class="col-md-4 col-sm-4 col-md-offset-4 col-sm-offset-4">
-  <h3>Change your password</h3>
-  <div class="well">
+  
+  <div class="container pt-5">
+    <div class="card devise-card-width rounded-2xl mx-auto">
+      
+  <div class="card-header">
+    <div class="fs-5"> Change your password</div>
+  </div>
+  
+  <div class="card-body">
 
   <%= f.input :reset_password_token, as: :hidden %>
   <%= f.full_error :reset_password_token %>
 
-  <div class="form-inputs">
+  <div class="pt-2">
     <%= f.input :password,
                 label: "New password",
                 required: true,
@@ -19,7 +25,7 @@
                 input_html: { autocomplete: "new-password" } %>
   </div>
 
-  <div class="form-actions">
+  <div class="pt-3">
     <%= f.button :submit, "Change my password", class: "btn btn-primary" %>
   </div>
 
@@ -27,3 +33,4 @@
   </div>
   </div>
 <% end %>
+
