--- a/app/views/static_pages/_ai_chat.html.erb
+++ b/app/views/static_pages/_ai_chat.html.erb
@@ -1,7 +1,7 @@
 <div class="pt-2 d-flex justify-content-center">
 <div class="card text-white bg-primary col-md-6 col-sm-12">
   <div class="card-header m-3 pt-3 ">
-  <font size=5><i class="bi bi-question-circle"></i> &nbsp; AI MED. EXPERT CHAT</font>
+    <font size=5 color='yellow'><i class="bi bi-info-square"></i> &nbsp; AI MED. EXPERT HELP</font>
   </div>
   <div class="card-body card-info">
     <div class="card-text"> Got medical question? You can ask me anything in any language. </b></div>
@@ -9,12 +9,12 @@
 
   <% @patient ||= Patient.new %>
     <%= simple_form_for @patient, url: static_pages_ai_chat_path, method: :post  do |f| %>
-    <%= f.input :question, label: false, placeholder: "Type your question here", class: "form-control col-md-2" %>
+    <%= f.input :question, as: :text, label: false, placeholder: "Type your question here", class: "form-control col-md-2" %>
     <div class="pt-3"></div>
     <%= f.button :submit, "Get answer", class:"btn btn-info" %>
     <%= f.button :submit, "Clear form", class: 'btn btn-outline-info', id: 'btnClear', type: 'reset' %>
     <div class='pt-3'>
-    <%= @patient.response %>
+    <%= @patient.response.gsub(/(\d+)./, '<p>\1.').html_safe  if @patient.response.present? %>
     </div>
   <% end %>
 
@@ -26,7 +26,7 @@
 <script>
   $(document).ready(function() {
     $("#btnClear").on("click", function() {
-//        $('#patient_question').val('');
+        $('#patient_question').val('');
         location.reload();
     });
   });
