--- a/app/views/patients/_medications.html.erb
+++ b/app/views/patients/_medications.html.erb
@@ -6,7 +6,7 @@
             <% @patient.medications.each do |med| %> 
 	    <%= form_with model: [@patient,med] do |f| %>
             <tr>
-               <td><%= link_to "#{med.name}", patient_medication_path(@patient,med), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %></td>
+               <td><%= link_to "#{med.name}", patient_medication_path(@patient,med), remote: true, 'data-bs-toggle':  "modal", 'data-bs-target': '#modal-window' %></td>
                <td> <%= med.date %> </td> 
                <td> <%= med.format %> </td> 
                <td> <%= med.route %> </td> 
@@ -18,7 +18,7 @@
                  <td colspan=2></td>
                <% else %>
 	         <td> <%= f.check_box :active, label: false, onchange: "this.form.submit();" %></td> 
-                 <td> <%= link_to '<i class="bi bi-pencil-square"></i>'.html_safe, edit_patient_medication_path(@patient,med), remote: device_is_desktop?, 'data-toggle':  "modal", 'data-target': '#modal-window',  method: 'get', onclick: "set_lg_modal()"   %> </td>
+                 <td> <%= link_to '<i class="bi bi-pencil-square"></i>'.html_safe, edit_patient_medication_path(@patient,med), remote: device_is_desktop?, 'data-bs-toggle':  "modal", 'data-bs-target': '#modal-window',  method: 'get', onclick: "set_lg_modal()"   %> </td>
                  <td><%= link_to '<i class="bi bi-x-square"></i>'.html_safe, patient_medication_path(@patient,med), method: :delete, data: { confirm: "Are you sure you want to delete #{med.name}?" } %></td>
                <% end %>
             </tr>
