--- a/app/views/patients/_desktop_index.html.erb
+++ b/app/views/patients/_desktop_index.html.erb
@@ -2,8 +2,8 @@
 <%= render 'shared/modal' %>
 
 <%
-    lname = (@sort == 'lname' && @direction == 'asc')?"Name &nbsp;&nbsp;<i class='glyphicon glyphicon-sort-by-alphabet'></i>":"Name &nbsp;&nbsp;<i class='glyphicon glyphicon-sort-by-alphabet-alt'></i>" 
-    dob = (@sort == 'dob' && @direction == 'asc')?"DOB &nbsp;<i class='glyphicon glyphicon-sort-by-order-alt'></i>":"DOB &nbsp;<i class='glyphicon glyphicon-sort-by-order'></i>" 
+    lname = (@sort == 'lname' && @direction == 'asc')?"Name &nbsp;&nbsp;<i class='bi bi-sort-alpha-down'></i>":"Name &nbsp;&nbsp;<i class='bi bi-sort-alpha-up'></i>" 
+    dob = (@sort == 'dob' && @direction == 'asc')?"DOB &nbsp;<i class='bi bi-sort-numeric-down'></i>":"DOB &nbsp;<i class='bi bi-sort-numeric-up'></i>" 
 %>
 
 <table class="table table-hover table-striped table-bordered table-responsive"> 
@@ -32,7 +32,7 @@
 </table>
 
 <div class="bottom_buttons">
-<%= button_to "New Patient", new_patient_path, remote: device_is_desktop?, 'data-toggle':  "modal", 'data-target': '#modal-window', class: "btn btn-primary col-md-2", method: "get"  %>
+<%= button_to "New Patient", new_patient_path, remote: device_is_desktop?, 'data-bs-toggle':  "modal", 'data-bs-target': '#modal-window', class: "btn btn-primary col-md-2", method: "get"  %>
 </div>
 
 <div class="my_pagination">
