--- a/app/views/patients/_invoices.html.erb
+++ b/app/views/patients/_invoices.html.erb
@@ -1,11 +1,11 @@
-<b><%= link_to "Invoices (#{@patient.invoices.count})<span class='caret'></span>".html_safe, '#', remote: true, 'data-toggle': "collapse", 'data-target': "#invoices", class: "drop-down-link"  %> </b>
+<b><%= link_to "Invoices (#{@patient.invoices.count})<span class='caret'></span>".html_safe, '#', remote: true, 'data-bs-toggle': "collapse", 'data-bs-target': "#invoices", class: "drop-down-link"  %> </b>
 <div class="collapse panel panel-info" id="invoices">
   <div class="tbl patient-dropdown-panel-body">
     <table class="table table-hover table-striped table-bordered">
         <th></th><th>To</th><th>Date</th><th>Amount</th><th>Paid?</th><th></th>
         <% @patient.invoices.each do |i| %>
         <tr>
-          <td><%= link_to "Invoice #{i.id}", invoice_path(i), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %></td>
+          <td><%= link_to "Invoice #{i.id}", invoice_path(i), remote: true, 'data-bs-toggle':  "modal", 'data-bs-target': '#modal-window' %></td>
           <td> <%= i.billto_str %> </td>
           <td> <%= i.date %> </td>
           <td> <%= sprintf("$%.2f",i.amount) %> </td>
@@ -13,7 +13,7 @@
           <% if current_user.patient? || current_user.doctor? %>
             <td></td>
           <% else %>
-            <td> <%= link_to '<i class="glyphicon glyphicon-edit"></i>'.html_safe, edit_invoice_path(i), remote: device_is_desktop?, 'data-toggle':  "modal", 'data-target': '#modal-window',  method: 'get'  %> </td>
+            <td> <%= link_to '<i class="bi bi-pencil-square"></i>'.html_safe, edit_invoice_path(i), remote: device_is_desktop?, 'data-bs-toggle':  "modal", 'data-bs-target': '#modal-window',  method: 'get'  %> </td>
           <% end %>
         </tr>
         <% end %>
