--- a/app/views/patient_docs/_show.html.erb
+++ b/app/views/patient_docs/_show.html.erb
@@ -3,9 +3,10 @@
 %>
 
 <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <b class="modal-title" id="myModalLabel">Patient <%= @patient_doc.patient.full_name %>: <%= @patient_doc.doc_type_str %> from Dr. <%= @patient_doc.doctor.lname %>,  <%= @patient_doc.date %></b>
+  <div class="modal-title" id="myModalLabel"> <%= @patient_doc.patient.full_name %>: <%= @patient_doc.doc_type_str %> from Dr. <%= @patient_doc.doctor.lname %>,  <%= @patient_doc.date %></div>
+  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 </div>
+
 <div class="modal-body">
         <iframe id="myModal" src="<%= @patient_doc.patient_doc.to_s %>" frameborder="0" width="100%" height="600px"></iframe>
 </div>
