--- a/app/views/patients/_staff_desktop_visits.html.erb
+++ b/app/views/patients/_staff_desktop_visits.html.erb
@@ -25,8 +25,10 @@
 	<div class="row">
 	  <div class="col-md-12"> <%= link_to "Print Visit History", visit_history_patient_path(@patient),  remote: device_is_desktop?, 'data-bs-toggle':  "modal", 'data-bs-target': '#modal-window', class: "btn btn-info", method: 'get', onclick: "set_lg_modal()" %> </div>
 	</div>
-        <div style="float:right">
-	<%= will_paginate @visits %>
+
+        <div class="row mt-3 my_pagination" style="float: right">
+        <%= will_paginate @visits %>
         </div>
+
     <% end %>
   </div>
